--- a/debian/control.in
+++ b/debian/control.in
@@ -2,12 +2,12 @@ Source: debathena-linerva
 Section: linerva/net
 Priority: extra
 Maintainer: Debian-Athena Project <debathena@mit.edu>
-Build-Depends: @cdbs@
+Build-Depends: @cdbs@, sysklogd
 Standards-Version: 3.7.2
 
 Package: debathena-linerva
 Architecture: all
-Depends: logcheck, screen, elinks
+Depends: logcheck, screen, elinks, sysklogd
 Provides: ${diverted-files}
 Conflicts: ${diverted-files}
 Description: Special Configuration for Linerva
