In linerva:   * Add /etc/ssh/sshd_config (for port 8080 sshd)   * Add /etc/apt/preferences and /etc/apt/sources.list.d/backports.   * Convert to use config-package.mk interface, new in config-package-     dev 4.5   * Replace DEB_REPLACE_FILES with DEB_TRANSFORM_FILES, as this was     renamed in config-package-dev 4.5   * Add init.debathena, which causes /sbin/init to be executed in the 32-bit     personality   * There's no longer a sshd_config file - get rid of that   * Add linerva-install

--- a/debian/control.in
+++ b/debian/control.in
@@ -7,7 +7,7 @@ Standards-Version: 3.7.2
 
 Package: debathena-linerva
 Architecture: all
-Depends: logcheck, screen, elinks, sysklogd
+Depends: logcheck, screen, elinks, sysklogd, linux32
 Provides: ${diverted-files}
 Conflicts: ${diverted-files}
 Description: Special Configuration for Linerva
