--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,12 @@ Source: debathena-linerva
 Section: linerva/net
 Priority: extra
 Maintainer: Debian-Athena Project <debathena@mit.edu>
-Build-Depends: cdbs (>= 0.4.23-1.1), debhelper (>= 4.2.0), config-package-dev, sysklogd
+Build-Depends: cdbs (>= 0.4.23-1.1), debhelper (>= 4.2.0), config-package-dev (>= 4.4), sysklogd
 Standards-Version: 3.7.2
 
 Package: debathena-linerva
 Architecture: all
-Depends: logcheck, screen, elinks, sysklogd
+Depends: logcheck, screen, elinks, sysklogd, linux32
 Provides: ${diverted-files}
 Conflicts: ${diverted-files}
 Description: Special Configuration for Linerva
