--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: debathena-linerva
 Section: linerva/net
 Priority: extra
 Maintainer: Debian-Athena Project <debathena@mit.edu>
-Build-Depends: cdbs (>= 0.4.23-1.1), debhelper (>= 4.2.0), config-package-dev (>= 4.4), sysklogd
+Build-Depends: cdbs (>= 0.4.23-1.1), debhelper (>= 4.2.0), config-package-dev (>= 4.5~), sysklogd
 Standards-Version: 3.7.2
 
 Package: debathena-linerva
