--- a/debian/control.in
+++ b/debian/control.in
@@ -1,7 +1,7 @@
 Source: debathena-linerva
 Section: linerva/net
 Priority: extra
-Maintainer: Debian-Athena Project <debathena@mit.edu>
+Maintainer: Debathena Project <debathena@mit.edu>
 Build-Depends: @cdbs@, sysklogd
 Standards-Version: 3.7.2
 
