Fix some bugs and update debathena-linerva for Lenny.
  * Move logcheck configuration into a separate git repository.
  * Fix linerva-clean-setugid in the case where there are no
     unexpected set[ug]id programs
  * Divert access.conf.debathena rather than access.conf
  * Update the motd for lenny

--- a/debian/control.in
+++ b/debian/control.in
@@ -7,6 +7,7 @@ Standards-Version: 3.7.2
 
 Package: debathena-linerva
 Architecture: all
+Pre-Depends: git-core
 Depends: logcheck, screen, elinks, sysklogd, linux32, bind9
 Provides: ${diverted-files}
 Conflicts: ${diverted-files}
