--- a/debian/control.in
+++ b/debian/control.in
@@ -2,13 +2,13 @@ Source: debathena-linerva
 Section: linerva/net
 Priority: extra
 Maintainer: Debathena Project <debathena@mit.edu>
-Build-Depends: @cdbs@, sysklogd, logcheck
+Build-Depends: @cdbs@, rsyslog, logcheck
 Standards-Version: 3.7.2
 
 Package: debathena-linerva
 Architecture: all
 Pre-Depends: git-core
-Depends: logcheck, screen, elinks, sysklogd, linux32, bind9
+Depends: logcheck, screen, elinks, rsyslog, linux32, bind9
 Provides: ${diverted-files}
 Conflicts: ${diverted-files}
 Description: Special Configuration for Linerva
