--- a/debian/control.in
+++ b/debian/control.in
@@ -10,7 +10,7 @@ Architecture: all
 Pre-Depends: git-core
 Depends: logcheck, screen, elinks, rsyslog, linux32, bind9
 Provides: ${diverted-files}
-Conflicts: ${diverted-files}
+Conflicts: ${diverted-files}, apache2
 Description: Special Configuration for Linerva
  This package does all the special stuff needed for Linerva's security
  setup.  It should be idempotent, though we do not guarantee that it
