In linerva:   * Up the default CPU limit to 12 hours.   * Run logcheck every 5 minutes, instead of every minute.   * Turn off GSSAPIStrictAcceptorCheck.     - Also use DEB_TRANSFORM_FILES for sshd_config.   * Add a "helpful" error message when people try to su.   * Only look for LVM PVs in /dev/md*.

--- a/debian/control.in
+++ b/debian/control.in
@@ -2,13 +2,13 @@ Source: debathena-linerva
 Section: linerva/net
 Priority: extra
 Maintainer: Debathena Project <debathena@mit.edu>
-Build-Depends: @cdbs@, rsyslog, logcheck
+Build-Depends: @cdbs@, rsyslog, logcheck, debathena-ssh-server-config, login
 Standards-Version: 3.7.2
 
 Package: debathena-linerva
 Architecture: all
 Pre-Depends: git-core
-Depends: logcheck, screen, elinks, rsyslog, linux32, bind9
+Depends: logcheck, screen, elinks, rsyslog, linux32, bind9, debathena-ssh-server-config
 Provides: ${diverted-files}
 Conflicts: ${diverted-files}, apache2
 Description: Special Configuration for Linerva
