--- a/debian/control.in
+++ b/debian/control.in
@@ -2,7 +2,7 @@ Source: debathena-linerva
 Section: linerva/net
 Priority: extra
 Maintainer: Debathena Project <debathena@mit.edu>
-Build-Depends: @cdbs@, rsyslog, logcheck, debathena-ssh-server-config, lvm2, bitlbee
+Build-Depends: @cdbs@, rsyslog, logcheck, debathena-ssh-server-config, lvm2, bitlbee, bash-completion
 Standards-Version: 3.7.2
 
 Package: debathena-linerva
